tests/types/errors/contextual_decimal_to_integer.mog
var value i32 = 1.5
